Fixes MCKIN-3137 Do not wrap dropdown text

--- a/static/scss/common/program-bar.scss
+++ b/static/scss/common/program-bar.scss
@@ -106,6 +106,11 @@
               right: 0 !important;
               left: auto !important;
             }
+
+            a, a:visited {
+              white-space: nowrap;
+              display: block;
+            }
           }
         }
       }
